# Localization

./: README.md  package.xml  setup.cfg  setup.py
config/: mini_ekf_params.yaml
localization_kf/: localization.py
test/reports/: lizard_localization.txt  pylint_localization.txt
test/unit/: test_localization_unit.py
